2003-07-28  Ken Kocienda  <kocienda@apple.com>

        Reviewed by John

        Fix for this bug:

        <rdar://problem/3336933>: REGRESSION (Panther): Mozilla build downloaded
        with wrong extension, bad file size (gzip)

	Use new delegate methods that allow for the correct reporting
	of progress in cases where Foundation-level content decoding 	
	has been performed on data received

        * WebCoreSupport.subproj/WebSubresourceClient.m:
        (-[WebSubresourceClient connection:didReceiveData:lengthReceived:]):
        * WebView.subproj/WebBaseResourceHandleDelegate.m:
        (-[WebBaseResourceHandleDelegate connection:didReceiveData:]):
        (-[WebBaseResourceHandleDelegate connection:didReceiveData:lengthReceived:]):
        * WebView.subproj/WebMainResourceClient.m:
        (-[WebMainResourceClient connection:didReceiveData:lengthReceived:]):

2003-07-28  Darin Adler  <darin@apple.com>

        Reviewed by Richard.

        - fixed leak of WebDataRequestParameters objects

        * WebView.subproj/WebDataProtocol.m:
        (-[NSMutableURLRequest _webDataRequestParametersForWriting]):
        Release the WebDataRequestParameters object after putting it in the dictionary.

2003-07-28  John Sullivan  <sullivan@apple.com>

	- fixed 3236815 -- bitmap TIFFs at > 72 dpi are scaled incorrectly 
	in Safari when viewed standalone (uspto.gov)

        Reviewed by Darin

        * WebCoreSupport.subproj/WebImageRenderer.m:
        (-[WebImageRenderer _adjustSizeToPixelDimensions]):
	call setScalesWhenResized:YES

2003-07-25  Richard Williamson   <rjw@apple.com>

	Fixed 3344519.  Prevent infinite recursion attempting font substitution.

        Reviewed by Darin.

        * WebCoreSupport.subproj/WebTextRenderer.m:
        (-[WebTextRenderer _floatWidthForRun:style:applyRounding:attemptFontSubstitution:widths:fonts:glyphs:startGlyph:endGlyph:numGlyphs:]):

2003-07-25  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by John.
